--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,8 +16,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="50dp"
-            android:text="TextView" />
+            android:textSize="50sp"
+            android:text="" />
+
 
         <LinearLayout
             android:layout_weight="1"
@@ -31,28 +32,28 @@
                 android:layout_width="150dp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="START"/>
+                android:text="@string/start"/>
 
             <Button
                 android:id="@+id/menu_statistics"
                 android:layout_width="150dp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="STATISTICS"/>
+                android:text="@string/statistics"/>
 
             <Button
                 android:id="@+id/menu_settings"
                 android:layout_width="150dp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="SETTINGS"/>
+                android:text="@string/settings"/>
         </LinearLayout>
 
         <TextView
             android:id="@+id/menu_footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="@string/teamname"
             android:gravity="center_horizontal" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
