--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -17,32 +17,38 @@
             android:layout_weight="20"
             android:layout_height="0dp" />
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvButton"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="10"
-            android:orientation="vertical">
+            android:layout_weight="10" />
 
-            <Button
-                android:id="@+id/game_option1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+        <!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="10"-->
+<!--            android:orientation="vertical">-->
 
-            <Button
-                android:id="@+id/game_option2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+<!--            <Button-->
+<!--                android:id="@+id/game_option1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
 
-            <Button
-                android:id="@+id/game_option3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+<!--            <Button-->
+<!--                android:id="@+id/game_option2"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
 
-            <Button
-                android:id="@+id/game_option4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+<!--            <Button-->
+<!--                android:id="@+id/game_option3"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/game_option4"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
+<!--        </LinearLayout>-->
 
     </LinearLayout>
 
